# data-collection-tool

./: .gitignore  CMakeLists.txt  README.md  build.sh
config/: record.example.json  test_record.json
src/: mcap_impl.cpp  player.cpp  recorder.cpp
test/: run_loopback_test.sh  run_shm_test.sh  test_publisher.cpp  test_subscriber.cpp
